--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   country_state_city_picker: ^1.2.8
   flutter_easyloading: ^3.0.5
   file_picker: ^6.1.1
+  provider: ^6.1.2
 
 
 dev_dependencies:
